core/roboconf-core/src/test/resources/configurations/invalid/external-is-keyword-for-imports.graph

t {
	installer: target;
	exports: mongoSeedExports, externalshare, shareexternal, external share;
}
